# fabric-atelier

./: .dockerignore  .gitignore  .gitmodules  BENCHMARKS.md  Cargo.toml  DEVELOPMENT_CONTEXT.md  DOCKER_BUILD_SUCCESS.md  Dictionaries.py  Dockerfile  GITHUB_TOPICS.md  LICENSE  Lambda.py  Map.py  Ponto_carne.py  Promoçao.py  README.md  SECURITY.md  Tabuada.py  WINDSURF_INTEGRATION.md  WINDSURF_SETUP.md  array..py  comiçao_amazon.py  dS101.py  deny.toml  desafio 32.py  dicionario.py  filter.py  financiamento.py  guess_the number.py  idade.py  list_comrehensio.py  list_generetor_expression.py  mea piramede.py  mistake.py  opp.py  proc_itens_lista.py  rentangulo.py  rock_paper_scissors.py  server.json  set.py  (+5 more)
.github/workflows/: publish-mcp.yml  security.yml
.windsurf/rules/: architecture-standards.md  arrow-parquet.md  build-system.md  code-review.md  git-commits.md  rust-best-practices.md
benches/: concurrent_requests.rs  mcp_protocol.rs  pattern_loading.rs  stress_test.rs
docs/: ARCHITECTURE.md  BUILD_SYSTEM.md  CODE_STYLE.md  DESIGN_SPEC.md  IMPLEMENTATION_PLAN.md  MCP_SCHEMA_DOCUMENTATION.md  MODULE_DESIGN.md  PROPOSAL.md  PUBLISHING_TO_MCP_REGISTRY.md  QUICKSTART.md  SECURITY_GUIDE.md  WINDSURF_RULES.md  WINDSURF_SETUP.md  WINDSURF_WORKFLOWS.md
docs/internal/: DEMO.md  DEPLOYMENT_COMPLETE.md  QUICK_START_PUBLISHING.md  SETUP_COMPLETE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mcp_protocol.rs  pattern_search.rs
scripts/: security-check.sh
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
windsurf-config/: README.md  install-rules.sh
(+18 files in other folders)
